# wire-cell-gen-kokkos

./: .gitignore  build-cmake  build-cmake-omp  build-cmake.hip  configure  wcb
.cmake-kk-hip/: CMakeLists.txt
.cmake-kk-hip/test/: CMakeLists.txt
.cmake-kokkos/: CMakeLists.txt
.cmake-kokkos-omp/: CMakeLists.txt
.cmake-kokkos-omp/test/: CMakeLists.txt
.cmake-kokkos/test/: CMakeLists.txt
cfg/pgrapher/common/sim/: nodes.jsonnet
container/: entrypoint.sh  setup.sh
docs/: kokkos-hackathon.md
example/: sim-mt.jsonnet  sim.fcl  sim.jsonnet  wct-sim-check.jsonnet  wct-sim.jsonnet
inc/WireCellGenKokkos/: BinnedDiffusion_transform.h  DepoTransform.h  GaussianDiffusion.h  GdData.h  ImpactData.h  ImpactTransform.h  KokkosArray.h  KokkosArray_cuda.h  KokkosArray_dummy.h  KokkosArray_fftw.h  KokkosArray_hip.h
src/: BinnedDiffusion_transform.cxx  DepoTransform.cxx  GaussianDiffusion.cxx  ImpactData.cxx  ImpactTransform.cxx  KokkosArray.cxx
test/: test_atadd.kokkos  test_cuda.kokkos  test_fft.kokkos  test_kokkosarray.kokkos  test_random.kokkos  test_subview.kokkos
